--- a/src/components/OurCoffee/ourCoffee.scss
+++ b/src/components/OurCoffee/ourCoffee.scss
@@ -53,8 +53,6 @@
         justify-content: space-between;
         align-items: center;
         font-size: 14px;
-
-
     }
 
     &_search {
@@ -93,7 +91,7 @@
 
     &-items {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         flex-wrap: wrap;
         margin-top: 60px;
